| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-02-12  Admin       Bug         Fixed #74 - Make all drop-down lists sort the same way (Marek)
2007-02-12  Delivery    Bug         Fixed #4 - Invocation code for popups generating double comment close (Marek)
2007-02-12  Admin       Bug         Fixed #59 - Restored russian, turkish and hebrew translations (Marek)
2007-02-02  Admin       Bug         Fixed #131 - Simulator doesn't correctly deal with banners served in different zones (Matteo)
2007-02-02  Admin       Bug         Fixed #119 - Capping and blocking do not work if impression logging is turned off (Matteo)
2007-02-02  Admin       Bug         Fixed #101 - ID's missing from URLs in advertiser-index (Chris)
2007-02-01  Admin       Bug         Fixed #104 - JavaScript error in various settings pages (Chris)
2007-02-01  Admin       Bug         Fixed #103 - SWF files become uncompressed by the SWF converter (Chris)
2007-02-01  Admin       Bug         Fixed #102 - SWF converter broken with FTP stored files (>8kb) (Chris)
2007-02-01  Maintenance Bug         Fixed #100 - Time targeting for high priority banners not working (Chris)
2007-01-18  General     Feature     Fixed #26 - Added campaign capping (Andrew)
2007-01-17  Delivery    Bug         Fixed #38 - {url_prefix} replacement broken (Matteo)
2007-01-17  Admin       Feature     Fixed #36, refs #37 - Some improvements to the channel ACL plugin (Chris)
2007-01-15  Admin       Bug         Fixed #2 - All advertisers are shown as inactive (Chris)
2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)